<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_color"
    tools:context=".SignInScreen.SignInActivity">

    <ImageView
        android:padding="5dp"
        android:id="@+id/logo"
        android:src="@drawable/logo_jd"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:layout_width="120dp"
        android:layout_height="120dp">

    </ImageView>
    <RelativeLayout
        android:id="@+id/relative_card_1"
        android:layout_marginTop="60dp"
        android:layout_below="@+id/logo"
        android:layout_marginHorizontal="20dp"
        android:elevation="10dp"
        android:background="@drawable/crad_bg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/login"
            android:fontFamily="@font/inter_bold"
            android:textSize="18sp"
            android:text="Login"
            android:paddingHorizontal="10dp"
            android:paddingVertical="10dp"
            android:layout_centerHorizontal="true"
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

        </TextView>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_marginHorizontal="20dp"
            android:layout_marginBottom="10dp"
            android:layout_below="@+id/login"
            android:id="@+id/textField_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/user_name"
        app:startIconDrawable="@drawable/user_svgrepo_com"
            android:textColorHint="@color/black"
            app:startIconScaleType="centerInside"
            app:hintTextColor="@color/black"
            app:boxStrokeColor="@color/black"
            app:startIconTint="@color/black"
        app:startIconContentDescription="User Name">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_user"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:fontFamily="@font/inter"
            android:maxLines="1"
            android:maxLength="40"
            android:inputType="text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_marginHorizontal="20dp"
           android:layout_marginVertical="10dp"
            android:layout_below="@+id/textField_user"
            android:id="@+id/textField_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:textColorHint="@color/black"
        app:startIconDrawable="@drawable/padlock_svgrepo_com"
            app:startIconScaleType="centerInside"
            app:hintTextColor="@color/black"
            app:boxStrokeColor="@color/black"
            app:startIconTint="@color/black"
        app:startIconContentDescription="User Name">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_pass"
            android:maxLines="1"
            android:maxLength="40"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:fontFamily="@font/inter"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/login_btn"
            android:textSize="15sp"
            android:textColor="@color/white"
            android:fontFamily="@font/inter_bold"
            android:text="@string/sign_in"
            android:layout_marginVertical="10dp"
            android:layout_below="@+id/textField_pass"
            android:background="@drawable/orange_btn"
            android:layout_marginHorizontal="20dp"
            android:layout_width="match_parent"
            android:layout_height="45dp">

        </androidx.appcompat.widget.AppCompatButton>

        <TextView
            android:id="@+id/forgot_pass"
            android:text="@string/forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:fontFamily="@font/inter"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/login_btn"
            android:layout_marginBottom="20dp">

        </TextView>


</RelativeLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_register_now"
        android:background="@color/white"
        android:elevation="10dp"
        android:layout_marginVertical="30dp"
        android:layout_marginHorizontal="20dp"
        app:cardCornerRadius="20dp"
        android:layout_below="@+id/relative_card_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:elevation="10dp"
            android:background="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/tv_new_user"
                android:layout_marginTop="10dp"
                android:paddingVertical="10dp"
                android:paddingHorizontal="10dp"
                android:layout_marginHorizontal="10dp"
                android:fontFamily="@font/inter"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:text="@string/are_you_a_new_user"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

            </TextView>
            <TextView
                android:layout_below="@+id/tv_new_user"
                android:paddingHorizontal="10dp"
                android:layout_marginHorizontal="10dp"
                android:fontFamily="@font/inter_extrabold"
                android:textSize="18sp"
                android:textColor="@color/orange"
                android:layout_marginBottom="20dp"
                android:text="Register Now"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

            </TextView>
            <ImageView
                android:padding="10dp"
               android:layout_centerVertical="true"
                android:layout_alignParentEnd="true"
                android:layout_marginHorizontal="20dp"
                android:src="@drawable/forward_jd"
                android:layout_width="50dp"
                android:layout_height="50dp">

            </ImageView>
        </RelativeLayout>

    </androidx.cardview.widget.CardView>
    <include
        android:id="@+id/loader"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        layout="@layout/view_loader" />

</RelativeLayout>