<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ContainerActivity.ContainerActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.cardview.widget.CardView
            android:id="@+id/tool_bar_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-10dp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="18dp">


            <!-- Toolbar styled with bottom-rounded corners -->
            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="75dp"
                android:background="@drawable/toolbar_rounded_corners"
                android:title="@string/custom_toolbar"
                android:titleTextColor="@color/black"
                app:titleTextAppearance="@style/TextAppearance.Widget.AppCompat.Toolbar.Title"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" >
                <RelativeLayout
                    android:layout_marginTop="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <ImageView
                        android:id="@+id/logo"
                        android:layout_centerVertical="true"
                        android:contentDescription="@string/logo"
                        android:src="@drawable/logo_jd"
                        android:layout_width="40dp"
                        android:layout_height="40dp">

                    </ImageView>

                    <ImageView
                        android:id="@+id/menu"
                        android:contentDescription="@string/menu"
                        android:padding="5dp"
                        android:layout_centerVertical="true"
                        android:layout_marginHorizontal="10dp"
                        android:layout_alignParentEnd="true"
                        android:src="@drawable/menu"
                        android:layout_width="40dp"
                        android:layout_height="40dp"/>
                    <de.hdodenhof.circleimageview.CircleImageView
                        android:src="@drawable/profile_jd"
                        android:padding="3dp"
                        android:id="@+id/profile_image"
                        android:layout_marginHorizontal="5dp"
                        android:layout_centerVertical="true"
                        android:layout_toStartOf="@+id/menu"
                        android:layout_width="40dp"
                        android:layout_height="40dp"/>

                </RelativeLayout>

            </androidx.appcompat.widget.Toolbar>
        </androidx.cardview.widget.CardView>

        <FrameLayout
            android:id="@+id/frame_layout"
            android:layout_marginTop="-20dp"
            android:layout_below="@+id/tool_bar_card"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </FrameLayout>

        <com.google.android.material.card.MaterialCardView
            android:layout_alignParentBottom="true"
            app:cardCornerRadius="60dp"
            android:elevation="5dp"
            android:backgroundTint="@color/white"
            app:cardBackgroundColor="@color/white"
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.bottomnavigation.BottomNavigationView
                android:layout_marginVertical="7dp"
                android:id="@+id/bottom_navigation"
                android:elevation="0dp"
                app:labelVisibilityMode="labeled"
                style="@style/Widget.MaterialComponents.BottomNavigationView.PrimarySurface"
                android:theme="@style/Base.Theme.JeetoDeals"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="5dp"
                android:background="@color/white"

                app:itemBackground="@drawable/bottom_nav_icon_background"
                app:itemTextColor="@color/bottom_nav_text_color"
                app:menu="@menu/menu" />


        </com.google.android.material.card.MaterialCardView>
    </RelativeLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigation_view"
        android:elevation="15dp"
        android:layout_width="280dp"
        android:layout_height="match_parent"
        android:layout_gravity="end"
        app:itemBackground="@drawable/nav_item_background_selector"
        android:fitsSystemWindows="true"
        android:clickable="true"
        android:backgroundTint="#1A1A1A"
        app:headerLayout="@layout/header"
        app:menu="@menu/navigation_menu">

    </com.google.android.material.navigation.NavigationView>








</androidx.drawerlayout.widget.DrawerLayout>